Fix css spacing on the frontpage carousel

--- a/static/styles/_chameleon.scss
+++ b/static/styles/_chameleon.scss
@@ -284,7 +284,7 @@ body.homepage {
 
 article {
   position: relative;
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
 
   @include clearfix();
 
